--- a/app/src/main/res/drawable/grey_bg_full_corner.xml
+++ b/app/src/main/res/drawable/grey_bg_full_corner.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="10dp"/>
-        <solid android:color="@color/grey"/>
+        <corners android:radius="100dp"/>
+        <solid android:color="@color/lightgrey"/>
     </shape>
 </item>
 </selector>
