--- a/app/src/main/res/drawable/lightbrown_bg.xml
+++ b/app/src/main/res/drawable/lightbrown_bg.xml
@@ -2,8 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="10dp"/>
-        <solid android:color="@color/grey"/>
+        <solid android:color="@color/lightbrown"/>
     </shape>
 </item>
 </selector>
