--- a/app/src/main/res/drawable/plus_bg.xml
+++ b/app/src/main/res/drawable/plus_bg.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
+        <solid android:color="@color/brown"/>
         <corners android:radius="10dp"/>
-        <solid android:color="@color/grey"/>
     </shape>
 </item>
 </selector>
