--- a/app/src/main/res/layout/viewholder_weight.xml
+++ b/app/src/main/res/layout/viewholder_weight.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/WeightLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/weightLayout"
     android:layout_width="wrap_content"
     android:layout_height="40dp"
     android:layout_marginStart="4dp"
@@ -14,5 +15,9 @@
         android:layout_height="wrap_content"
         android:text="S"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
