--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="lightgrey">#FFEEEEEE</color>
     <color name="darkgrey">#FF666666</color>
     <color name="brown">#943C02</color>
-    <color name="lightbrown">#FF943C02</color>
+    <color name="lightbrown">#CD853F</color>
 </resources>
